# Autonomous-Drone-landing-on-a-Moving-Platform

./: .gitignore  README.md
scripts/: generate_markers.py
src/mars_drone_control/: package.xml  setup.cfg  setup.py
src/mars_drone_control/launch/: control_launch.py
src/mars_drone_control/mars_drone_control/: drone_controller.py
src/mars_msgs/: CMakeLists.txt  package.xml
src/mars_msgs/msg/: PlatformState.msg
src/mars_perception/: package.xml  setup.cfg  setup.py
src/mars_perception/launch/: perception_launch.py
src/mars_perception/mars_perception/: aruco_detector.py
src/mars_platform/: package.xml  setup.cfg  setup.py
src/mars_platform/launch/: platform_launch.py
src/mars_platform/mars_platform/: platform_mover.py
src/mars_simulation/: CMakeLists.txt  package.xml
src/mars_simulation/config/: mars_rviz.rviz  simulation.yaml
src/mars_simulation/launch/: autonomy_launch.py  gazebo_launch.py  mars_full_launch.py  simulation_launch.py  spawn_models_launch.py
src/mars_simulation/models/landing_platform/: model.config  model.sdf
src/mars_simulation/models/landing_platform/materials/scripts/: aruco.material
src/mars_simulation/models/mars_drone/: model.config  model.sdf
src/mars_simulation/src/: drone_plugin.cpp
src/mars_simulation/worlds/: mars_world.world
src/mars_tracking/: package.xml  setup.cfg  setup.py
src/mars_tracking/launch/: tracking_launch.py
src/mars_tracking/mars_tracking/: platform_tracker.py
